# rust-dynamic-graphql-schema

./: Cargo.toml
src/: error.rs  graphql_schema.rs  main.rs  postgres.rs  utils.rs
