[package]
name = "graphql-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.0", default-features = true, features = ["dynamic-schema"]}
async-graphql-axum = "7.0.0"
axum = "0.7.3"
chrono = "0.4.31"
dotenvy = "0.15.7"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "std"]}
